updated composer.json files to contain information about autoloading and target dirs

--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,9 @@
     },
     "suggest": {
         "symfony/process": ">=2.0"
-    }
+    },
+    "autoload": {
+        "psr-0": { "Symfony\\Component\\BrowserKit": "" }
+    },
+    "target-dir": "Symfony/Component/BrowserKit"
 }
