Add minimum-stability (dev) in each component

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "psr-0": { "Symfony\\Component\\BrowserKit": "" }
     },
     "target-dir": "Symfony/Component/BrowserKit",
+    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
             "dev-master": "2.1-dev"
