Optimize autoload prefix in composer.json
By having more specific autoload prefixes it is possible to reduce the
number of stat calls made. Also it prevents conflicts with similar
namespaces.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "symfony/process": "2.2.*"
     },
     "autoload": {
-        "psr-0": { "Symfony\\Component\\BrowserKit": "" }
+        "psr-0": { "Symfony\\Component\\BrowserKit\\": "" }
     },
     "target-dir": "Symfony/Component/BrowserKit",
     "minimum-stability": "dev",
