--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/dom-crawler": "2.2.*"
+        "symfony/dom-crawler": "~2.0"
     },
     "require-dev": {
         "symfony/process": "2.2.*",
