--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony/dom-crawler": "~2.0"
     },
     "require-dev": {
-        "symfony/process": "2.2.*",
+        "symfony/process": "~2.0",
         "symfony/css-selector": "~2.0"
     },
     "suggest": {
