--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     ],
     "require": {
         "php": "^7.2.9",
-        "symfony/dom-crawler": "^3.4|^4.0|^5.0"
+        "symfony/dom-crawler": "^4.4|^5.0"
     },
     "require-dev": {
-        "symfony/css-selector": "^3.4|^4.0|^5.0",
-        "symfony/http-client": "^4.3|^5.0",
-        "symfony/mime": "^4.3|^5.0",
-        "symfony/process": "^3.4|^4.0|^5.0"
+        "symfony/css-selector": "^4.4|^5.0",
+        "symfony/http-client": "^4.4|^5.0",
+        "symfony/mime": "^4.4|^5.0",
+        "symfony/process": "^4.4|^5.0"
     },
     "suggest": {
         "symfony/process": ""
