--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
-        "symfony/dom-crawler": "^5.4|^6.0|^7.0"
+        "php": ">=8.2",
+        "symfony/dom-crawler": "^6.4|^7.0"
     },
     "require-dev": {
-        "symfony/css-selector": "^5.4|^6.0|^7.0",
-        "symfony/http-client": "^5.4|^6.0|^7.0",
-        "symfony/mime": "^5.4|^6.0|^7.0",
-        "symfony/process": "^5.4|^6.0|^7.0"
+        "symfony/css-selector": "^6.4|^7.0",
+        "symfony/http-client": "^6.4|^7.0",
+        "symfony/mime": "^6.4|^7.0",
+        "symfony/process": "^6.4|^7.0"
     },
     "autoload": {
         "psr-4": { "Symfony\\Component\\BrowserKit\\": "" },
